--- a/index.html
+++ b/index.html
@@ -1,10 +1,131 @@
+<!DOCTYPE html>
 <html>
-  
-  <head>
-    <title> Hello </title>
-  </head>
-  
-  <body>
-    <p> Hello WORLD. </p>
-  </body>
+<!-- Head tag allows information that we don't want the user to interact with in the main body of the HTML / They can view this tag on the tab -->
+
+
+
+<head>
+  <link rel='stylesheet' href='style.css'>
+  <style>
+    table,
+    th,
+    td {
+      border: 1px solid black;
+      border-collapse: collapse;
+    }
+  h2{text-align: center;}
+  </style>
+  <title>My Portfolio</title>
+</head>
+
+
+<!-- This is how to add the sky background -->
+<body>
+  <style>
+body {
+  background-image: url('https://img.freepik.com/free-vector/abstract-watercolor-pastel-background_87374-139.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
+  <ul><!-- Navagation bar -->
+    <li> <a class='active' href='#home'> Home </a> </li>
+    <li> <a href='#personalstatement'> Personal statements </a> </li>
+    <li> <a href='#projects'> Projects </a> </li>
+    <li> <a href='#hobbies'> Hobbies </a> </li>
+    <li> <a href='#qualifications'> Qualifications </a> </li>
+    <li>  <a href='#contact'> Contact </a> </li>
+  </ul>
+  <a id='personalstatement'>
+  <a id='home'>
+  <!-- H1 = Heading 1 tag -->
+  <h1 style='margin-top: 50px;color:blue; text-align: center'>Harvey Snaith - Portfolio</h1>
+  <!-- H2 = Heading 2 tag -->
+  <h2 style="color:Blue;text-align: center;">Personal Statement</h2>
+ <p style="text-align:center;border:0.1px solid black;font-size: 30px;background-color:#ADD8E6">I love to play valorant with my friends which is my favorite game. I have 3 cats called george, millie and mouse which were all strays whom we gave a home. I go to strode college where I do digital design production development level 2. </p>
+
+ 
+<p style="text-align:center"><a href="https://www.strode-college.ac.uk/"> Strode college link </a></p>
+<p style="text-align:center;"> <p style="text-align:center;">
+  <img style="border:1px solid black;" src="https://pbs.twimg.com/profile_images/1240172786/Strode_logo_red_blue_400x400.png" width="40" height="30.5" alt="strode logo" />
+ 
+  <a id='projects'>
+<h2 style="color:Blue;text-align: center;">My projects</h2>
+<p style="text-align:center;border:0.1px solid black;font-size: 30px;background-color:#ADD8E6">This website is currently my only project other than getting better at valorant</p>
+ 
+
+ 
+  <h2 style="color:Blue;">My Hobbies</h2>  
+  <a id='hobbies'> <!-- Teleports you after u click hobbies -->
+<p style="text-align:center;"> <p style="text-align:center;">
+  <img style="border:10px solid black;" src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt5aee65464000114a/62ee202299dab06ebd13de8d/1920x1080-KEY-ART_opt.jpg" width="640" height="360" alt="Valorant" />
+ 
+  <p style="text-align:center;">
+    <!-- This is how you put a border around an image--><img style="border:10px solid black;" src="https://cdn.theatlantic.com/thumbor/W544GIT4l3z8SG-FMUoaKpFLaxE=/0x131:2555x1568/1600x900/media/img/mt/2017/06/shutterstock_319985324/original.jpg" width="640" height="360" alt="Jumping cat" />
+
+<a id='qualifications'>
+ <h2 style="color:Blue;text-align:center;table-align:centeront-size: 52px;">My qualifications
+ </h2> <table align="center" style="border:8px solid black;background-color:#ADD8E6">
+
+    <tr>
+      <th>School</th>
+      <th>Qualifications</th>
+      <th>Grades</th>
+    </tr>
+   
+    <tr>
+      <th>Whitstone</th>
+      <th>Maths</th>
+      <th>4</th>
+    </tr>
+   
+    <tr>
+      <th></th>
+      <th>English</th>
+      <th>4</th>
+    </tr>
+   
+    <th></th>
+      <th>Science</th>
+    <th>5</th>
+    </tr>
+   
+    <tr>
+      <th></th>
+      <th>Histroy</th>
+      <th>4</th>
+    </tr>
+   
+    <tr>
+      <th></th>
+      <th>Btec sport</th>
+      <th>Pass 2</th>
+    </tr>
+   
+    <th></th>
+      <th>Art & Design</th>
+      <th>Merit</th>
+    </tr>
+    <tr>
+      <th>Bath college</th>
+      <th>Electrical installation</th>
+      <th>Completed/ Gained diploma</th>
+    </tr>
+   
+  </table>
+
+
+
+</body>
+
+<a id='contact'>
+<h2 style="color:Blue;">My Contacts</h2>  
+  <a id='hobbies'
+<p style="text-align:center;"> <p style="text-align:center;">
+<p style="text-align:center;border:0.1px solid black;font-size: 30px;background-color:#ADD8E6">H**********h@gmail.com
+0741*******</p> <!-- hidden for safety -->
+
+
+ 
 </html>
